Finishing documentation api
